<resources>
    <string name="app_name">FirstApp</string>
    <string name="email">Email</string>
    <string name="please_input_email">Please input email…</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password</string>
    <string name="register_new_a_account">Register new a account</string>
    <string name="title">Title</string>
    <string name="noi_dung">Nội dung</string>
    <string name="san_pham_moi_nhat">Sản phẩm mới nhất</string>
    <string name="images">images</string>
    <string name="ket_noi">Kết nối</string>
    <string name="customer_dialog_process">Customer Dialog Process</string>
    <string name="navigation_bar">Navigation Bar</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="my_page">My page</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="favorite_fragments">Favorite Fragments</string>
    <string name="my_page_fragment">My page fragment</string>
    <string name="get_video_from_gallery">Get video from Gallery</string>
</resources>